force-app/zurich-base/main/default/objects/MaestroApetito__c/MaestroApetito__c.object-meta.xml
<CustomObject>
    <description>Entidad que contiene todos los datos necesarios para poder realizar el cálculo del riesgo de apetito.</description>
    <label>Maestro de Apetito</label>
    <nameField>
        <label>Risk Appetite Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maestro de Apetitos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>