force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/Autorizacion__c.field-meta.xml
<CustomField>
    <fullName>Autorizacion__c</fullName>
    <label>Authorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>