force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/BaseCalculo__c.field-meta.xml
<CustomField>
    <fullName>BaseCalculo__c</fullName>
    <label>Calculation Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>