force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/CNAE__c.field-meta.xml
<CustomField>
    <fullName>CNAE__c</fullName>
    <description>Clasificación Nacional Actividades Económicas</description>
    <inlineHelpText>Clasificación Nacional Actividades Económicas</inlineHelpText>
    <label>CNAE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>