force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/CodigoActividad845__c.field-meta.xml
<CustomField>
    <fullName>CodigoActividad845__c</fullName>
    <label>Activity Code 845</label>
    <length>255</length>
    <type>Text</type>
</CustomField>