force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/CodigoActividad__c.field-meta.xml
<CustomField>
    <fullName>CodigoActividad__c</fullName>
    <externalId>true</externalId>
    <label>Activity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>