force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/CodigoProducto__c.field-meta.xml
<CustomField>
    <fullName>CodigoProducto__c</fullName>
    <externalId>true</externalId>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>