force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/CompetitivenessLevel__c.field-meta.xml
<CustomField>
    <fullName>CompetitivenessLevel__c</fullName>
    <label>Competitiveness level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>