force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConAspiracionAutomatica__c.field-meta.xml
<CustomField>
    <fullName>ConAspiracionAutomatica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Automatic Breathing</label>
    <type>Checkbox</type>
</CustomField>