force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConDestilacion__c.field-meta.xml
<CustomField>
    <fullName>ConDestilacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Distillation</label>
    <type>Checkbox</type>
</CustomField>