force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConExistenciaLiquidosInflamables__c.field-meta.xml
<CustomField>
    <fullName>ConExistenciaLiquidosInflamables__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Con Existencia de Productos Líquidos Inflamables</description>
    <label>With Flammable Liquids Inventory</label>
    <type>Checkbox</type>
</CustomField>