force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConFabricacionDeEnvases__c.field-meta.xml
<CustomField>
    <fullName>ConFabricacionDeEnvases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Container Production</label>
    <type>Checkbox</type>
</CustomField>