force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConFoamizado__c.field-meta.xml
<CustomField>
    <fullName>ConFoamizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Foaming</label>
    <type>Checkbox</type>
</CustomField>