force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConMateriasPlasticasEspumosas__c.field-meta.xml
<CustomField>
    <fullName>ConMateriasPlasticasEspumosas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Foaming Plastic Matter</label>
    <type>Checkbox</type>
</CustomField>