force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConNitratos__c.field-meta.xml
<CustomField>
    <fullName>ConNitratos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Nitrates</label>
    <type>Checkbox</type>
</CustomField>