force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConPlanchasCombustibles__c.field-meta.xml
<CustomField>
    <fullName>ConPlanchasCombustibles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Combustible Irons</label>
    <type>Checkbox</type>
</CustomField>