force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConRecubrimiento__c.field-meta.xml
<CustomField>
    <fullName>ConRecubrimiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Coating</label>
    <type>Checkbox</type>
</CustomField>