force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConSecaderoMadera__c.field-meta.xml
<CustomField>
    <fullName>ConSecaderoMadera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Wood Yard</label>
    <type>Checkbox</type>
</CustomField>