force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ConTapizados__c.field-meta.xml
<CustomField>
    <fullName>ConTapizados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Upholstered</label>
    <type>Checkbox</type>
</CustomField>