force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DeductiblesTop1__c.field-meta.xml
<CustomField>
    <fullName>DeductiblesTop1__c</fullName>
    <label>Deductibles - Top 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>