force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DeductiblesTop2__c.field-meta.xml
<CustomField>
    <fullName>DeductiblesTop2__c</fullName>
    <label>Deductibles - Top 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>