force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DescripcionActividad845__c.field-meta.xml
<CustomField>
    <fullName>DescripcionActividad845__c</fullName>
    <label>Activity 845 Description</label>
    <type>TextArea</type>
</CustomField>