force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DescuentoMediadores__c.field-meta.xml
<CustomField>
    <fullName>DescuentoMediadores__c</fullName>
    <label>Intermediary Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>