force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DescuentoNivel0Suscriptor__c.field-meta.xml
<CustomField>
    <fullName>DescuentoNivel0Suscriptor__c</fullName>
    <label>Level 0 Subscriber Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>