force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DescuentoNivel1Suscriptor__c.field-meta.xml
<CustomField>
    <fullName>DescuentoNivel1Suscriptor__c</fullName>
    <label>Level 1 Subscriber Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>