force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DescuentoRespVertical__c.field-meta.xml
<CustomField>
    <fullName>DescuentoRespVertical__c</fullName>
    <label>Vertical Resp Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>