force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DeviationGuaranteeTop1__c.field-meta.xml
<CustomField>
    <fullName>DeviationGuaranteeTop1__c</fullName>
    <label>Deviation guarantee - Top 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>