force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DeviationGuaranteeTop2__c.field-meta.xml
<CustomField>
    <fullName>DeviationGuaranteeTop2__c</fullName>
    <label>Deviation guarantee - Top 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>