force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DocumentacionRelacionada__c.field-meta.xml
<CustomField>
    <fullName>DocumentacionRelacionada__c</fullName>
    <label>Related Paperwork</label>
    <length>255</length>
    <type>Text</type>
</CustomField>