force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DUO__c.field-meta.xml
<CustomField>
    <fullName>DUO__c</fullName>
    <label>DUO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>