force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/DyO__c.field-meta.xml
<CustomField>
    <fullName>DyO__c</fullName>
    <label>DyO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NivelApetitoRiesgo</valueSetName>
    </valueSet>
</CustomField>