force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/Espumosos__c.field-meta.xml
<CustomField>
    <fullName>Espumosos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foamings</label>
    <type>Checkbox</type>
</CustomField>