force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/Excluida__c.field-meta.xml
<CustomField>
    <fullName>Excluida__c</fullName>
    <label>Excluded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excluida</fullName>
            </value>
            <value>
                <fullName>Restringida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>