force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <label>Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>