force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaAlmacenMercanciasPeligrosas__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaAlmacenMercanciasPeligrosas__c</fullName>
    <description>Franquicia almacenamiento de mercancías peligrosas Recomendada</description>
    <inlineHelpText>Franquicia almacenamiento de mercancías peligrosas Recomendada</inlineHelpText>
    <label>Dangerous Goods Storage Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>