force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaAlquilerBienesMaquinaria__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaAlquilerBienesMaquinaria__c</fullName>
    <description>Franquicia alquiler o cesión de bienes o maquinaria Recomendada</description>
    <inlineHelpText>Franquicia alquiler o cesión de bienes o maquinaria Recomendada</inlineHelpText>
    <label>Machinery Goods Renting Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>