force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaBienesEmpleados__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaBienesEmpleados__c</fullName>
    <description>Franquicia bienes empleados Recomendada</description>
    <inlineHelpText>Franquicia bienes empleados Recomendada</inlineHelpText>
    <label>Personnel Goods Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>