force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaBienesPreexistentes__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaBienesPreexistentes__c</fullName>
    <description>Franquicia bienes preexistentes Recomendada</description>
    <inlineHelpText>Franquicia bienes preexistentes Recomendada</inlineHelpText>
    <label>Preexisting Goods Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>