force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaCablesConducciones__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaCablesConducciones__c</fullName>
    <description>Franquicia cables y conducciones Recomendada</description>
    <inlineHelpText>Franquicia cables y conducciones Recomendada</inlineHelpText>
    <label>Conducting Wires Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>