force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaCajasSeguridadHabitaciones__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaCajasSeguridadHabitaciones__c</fullName>
    <description>Franquicia cajas de seguridadde las habitaciones Recomendada</description>
    <inlineHelpText>Franquicia cajas de seguridadde las habitaciones Recomendada</inlineHelpText>
    <label>Safety Box Rooms Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>