force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaColindantes__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaColindantes__c</fullName>
    <description>Franquicia colindantes Recomendada</description>
    <inlineHelpText>Franquicia colindantes Recomendada</inlineHelpText>
    <label>Adjacent Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>