force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaContaminacionAccidental__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaContaminacionAccidental__c</fullName>
    <description>Franquicia contaminación accidental Recomendada</description>
    <inlineHelpText>Franquicia contaminación accidental Recomendada</inlineHelpText>
    <label>Accidental Pollution Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>