force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaDanosBienesCajaSeguridad__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaDanosBienesCajaSeguridad__c</fullName>
    <description>Franquicia daños a bienes depositados en la caja de seguridad del establecimiento Recomendada</description>
    <inlineHelpText>Franquicia daños a bienes depositados en la caja de seguridad del establecimiento Recomendada</inlineHelpText>
    <label>Safety Box Goods Damages Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>