force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaDanosBienesCustodia__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaDanosBienesCustodia__c</fullName>
    <description>Franquicia daños a bienes en custodia Recomendada</description>
    <inlineHelpText>Franquicia daños a bienes en custodia Recomendada</inlineHelpText>
    <label>Safekeeping Goods Damage Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>