force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaDerribos__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaDerribos__c</fullName>
    <description>Franquicia derribos recomendada</description>
    <inlineHelpText>Franquicia derribos recomendada</inlineHelpText>
    <label>Demolition Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>