force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaDetencionTraficoFerroviario__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaDetencionTraficoFerroviario__c</fullName>
    <description>Franquicia Paralización del tráfico ferroviario Recomendada</description>
    <inlineHelpText>Franquicia Paralización del tráfico ferroviario Recomendada</inlineHelpText>
    <label>Railway Traffic Standstill Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>