force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaDronesMateriales__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaDronesMateriales__c</fullName>
    <description>Franquicia drones materiales Recomendada</description>
    <inlineHelpText>Franquicia drones materiales Recomendada</inlineHelpText>
    <label>Drone Equipment Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>