force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaExplotacionesMateriales__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaExplotacionesMateriales__c</fullName>
    <description>Franquicia Explotación Materiales Recomendada</description>
    <inlineHelpText>Franquicia Explotación Materiales Recomendada</inlineHelpText>
    <label>Exploitation Goods Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>