force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaExportUSACANMateriales__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaExportUSACANMateriales__c</fullName>
    <description>Franquicia exportaciones USA / Canadá materiales Recomendada</description>
    <inlineHelpText>Franquicia exportaciones USA / Canadá materiales Recomendada</inlineHelpText>
    <label>Goods Export USA-CAN Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>