force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaGastosMontajeDesmontaje__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaGastosMontajeDesmontaje__c</fullName>
    <description>Franquicia gastos de montaje y desmontaje Recomendada</description>
    <inlineHelpText>Franquicia gastos de montaje y desmontaje Recomendada</inlineHelpText>
    <label>Assembly Disassembly Expenses Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>