force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaGastosRetirada__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaGastosRetirada__c</fullName>
    <description>Franquicia gastos de retirada Recomendada</description>
    <inlineHelpText>Franquicia gastos de retirada Recomendada</inlineHelpText>
    <label>Removal Expenses Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>