force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaLavanderiaGuardarropa__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaLavanderiaGuardarropa__c</fullName>
    <description>Franquicia lavandería y guardarropa Recomendada</description>
    <inlineHelpText>Franquicia lavandería y guardarropa Recomendada</inlineHelpText>
    <label>Laundry Wardrobe Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>