force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaLocativaAmpliada__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaLocativaAmpliada__c</fullName>
    <description>Franquicia locativa ampliada Recomendada</description>
    <inlineHelpText>Franquicia locativa ampliada Recomendada</inlineHelpText>
    <label>Increased Locative Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>