force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaObjetosHabitaciones__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaObjetosHabitaciones__c</fullName>
    <description>Franquicia objetos en las habitaciones Recomendada</description>
    <inlineHelpText>Franquicia objetos en las habitaciones Recomendada</inlineHelpText>
    <label>Objects Room Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>