force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaObjVehiculoAparcadoRecinto__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaObjVehiculoAparcadoRecinto__c</fullName>
    <description>Franquicia objetos en vehículos aparcados en recinto asegurado Recomendada</description>
    <inlineHelpText>Franquicia objetos en vehículos aparcados en recinto asegurado Recomendada</inlineHelpText>
    <label>Vehicle Parked Precinct Objects Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>