force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaPerjuiciosPatrimoniales__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaPerjuiciosPatrimoniales__c</fullName>
    <description>Franquicia Perjuicios Patrimoniales Puros Recomendada</description>
    <inlineHelpText>Franquicia Perjuicios Patrimoniales Puros Recomendada</inlineHelpText>
    <label>Property Damages Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>