force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaProbadoresMateriales__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaProbadoresMateriales__c</fullName>
    <description>Franquicia probadores materiales Recomendada</description>
    <inlineHelpText>Franquicia probadores materiales Recomendada</inlineHelpText>
    <label>Equipment Testers Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>