force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaProductosMateriales__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaProductosMateriales__c</fullName>
    <description>Franquicia productos materiales Recomendada</description>
    <inlineHelpText>Franquicia productos materiales Recomendada</inlineHelpText>
    <label>Material Items Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>