force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaRecomendadaPostTrabajos__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaRecomendadaPostTrabajos__c</fullName>
    <description>Franquicia Recomendada Post-Trabajos</description>
    <inlineHelpText>Franquicia Recomendada Post-Trabajos</inlineHelpText>
    <label>Recommended Post-Job Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>