force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaServiciosAparcacoches__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaServiciosAparcacoches__c</fullName>
    <description>Franquicia servicios de aparcacoches Recomendada</description>
    <inlineHelpText>Franquicia servicios de aparcacoches Recomendada</inlineHelpText>
    <label>Parking Attendant Services Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>