force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaUnionMezcla__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaUnionMezcla__c</fullName>
    <description>Franquicia Unión y mezcla Recomendada</description>
    <inlineHelpText>Franquicia Unión y mezcla Recomendada</inlineHelpText>
    <label>Mixture Merger Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>