force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaUsoExplosivos__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaUsoExplosivos__c</fullName>
    <description>Franquicia uso de explosivos Recomendada</description>
    <inlineHelpText>Franquicia uso de explosivos Recomendada</inlineHelpText>
    <label>Explosive Use Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>