force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaVehiculosCustodia__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaVehiculosCustodia__c</fullName>
    <description>Franquicia vehículos en custodia Recomendada</description>
    <inlineHelpText>Franquicia vehículos en custodia Recomendada</inlineHelpText>
    <label>Custody Vehicles Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>