force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaVendorsRecomendada__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaVendorsRecomendada__c</fullName>
    <description>Franquicia Vendors Recomendada</description>
    <inlineHelpText>Franquicia Vendors Recomendada</inlineHelpText>
    <label>Recommended Vendors Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>