force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/FranquiciaVidaPrivada__c.field-meta.xml
<CustomField>
    <fullName>FranquiciaVidaPrivada__c</fullName>
    <description>Franquicia vida privada Recomendada</description>
    <inlineHelpText>Franquicia vida privada Recomendada</inlineHelpText>
    <label>Private Life Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>