force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/GDC__c.field-meta.xml
<CustomField>
    <fullName>GDC__c</fullName>
    <label>GDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>