force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/HGPrevisionCambio__c.field-meta.xml
<CustomField>
    <fullName>HGPrevisionCambio__c</fullName>
    <label>HG Change Prediction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>Power Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>