force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/NivelCompetencias__c.field-meta.xml
<CustomField>
    <fullName>NivelCompetencias__c</fullName>
    <label>Competence Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>