force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/NivelSeguridad__c.field-meta.xml
<CustomField>
    <fullName>NivelSeguridad__c</fullName>
    <label>Security Level</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>