force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/NombreActividad__c.field-meta.xml
<CustomField>
    <fullName>NombreActividad__c</fullName>
    <label>Activity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>