force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/NombreProducto__c.field-meta.xml
<CustomField>
    <fullName>NombreProducto__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>