force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/NotasAyudaSuscripcionRiesgo__c.field-meta.xml
<CustomField>
    <fullName>NotasAyudaSuscripcionRiesgo__c</fullName>
    <description>Notas de ayuda para la suscripción del riesgo</description>
    <inlineHelpText>Notas de ayuda para la suscripción del riesgo</inlineHelpText>
    <label>Suscription Risk Help Notes</label>
    <type>TextArea</type>
</CustomField>