force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ObservacionesActividad__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesActividad__c</fullName>
    <label>Activity Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>