force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ObservacionesProducto__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesProducto__c</fullName>
    <label>Product Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>