force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/PalabrasRelacionadasBuscadorWeb__c.field-meta.xml
<CustomField>
    <fullName>PalabrasRelacionadasBuscadorWeb__c</fullName>
    <description>Palabras relacionadas Buscador Web</description>
    <inlineHelpText>Palabras relacionadas Buscador Web</inlineHelpText>
    <label>Related Words Web Search Engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>