force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/PedirDireccionSituacionRiesgo__c.field-meta.xml
<CustomField>
    <fullName>PedirDireccionSituacionRiesgo__c</fullName>
    <label>Ask Risky Situation Address</label>
    <type>TextArea</type>
</CustomField>