force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/PolicyFramework__c.field-meta.xml
<CustomField>
    <fullName>PolicyFramework__c</fullName>
    <label>Policy Framework</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>