force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/Preferente__c.field-meta.xml
<CustomField>
    <fullName>Preferente__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excluido</fullName>
            </value>
            <value>
                <fullName>No Preferente</fullName>
            </value>
            <value>
                <fullName>Preferente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>