force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/ProteccionesRobo__c.field-meta.xml
<CustomField>
    <fullName>ProteccionesRobo__c</fullName>
    <label>Theft Protections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>