force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/S1__c.field-meta.xml
<CustomField>
    <fullName>S1__c</fullName>
    <label>S1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>