force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/S2__c.field-meta.xml
<CustomField>
    <fullName>S2__c</fullName>
    <label>S2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>