force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/S3__c.field-meta.xml
<CustomField>
    <fullName>S3__c</fullName>
    <label>S3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>