force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/SharepointLink__c.field-meta.xml
<CustomField>
    <fullName>SharepointLink__c</fullName>
    <description>OCS EON. Enlace a la documentación de sharepoint</description>
    <label>Sharepoint Link</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>