force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/SharepointLinkCyber__c.field-meta.xml
<CustomField>
    <fullName>SharepointLinkCyber__c</fullName>
    <description>OCS EON. Link a la documentación de Sharepoint para ciber-riesgos</description>
    <label>Sharepoint Link Cyber</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>