force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/SharepointLinkDO__c.field-meta.xml
<CustomField>
    <fullName>SharepointLinkDO__c</fullName>
    <description>OCS EON. Link a la documentación de Sharepoint para DyO</description>
    <label>Sharepoint Link D&amp;O</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>