force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/SIC__c.field-meta.xml
<CustomField>
    <fullName>SIC__c</fullName>
    <description>Standard Industrial Classification</description>
    <label>SIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>