force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/SICDescription__c.field-meta.xml
<CustomField>
    <fullName>SICDescription__c</fullName>
    <label>SIC Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>