force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/Subfamilia__c.field-meta.xml
<CustomField>
    <fullName>Subfamilia__c</fullName>
    <label>Subfamily</label>
    <length>255</length>
    <type>Text</type>
</CustomField>