force-app/zurich-base/main/default/objects/MaestroApetito__c/fields/UsoExplosivos__c.field-meta.xml
<CustomField>
    <fullName>UsoExplosivos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Explosive Use</label>
    <type>Checkbox</type>
</CustomField>